--- a/index.html
+++ b/index.html
@@ -1,7 +1,48 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <title>BRaimbault</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/site.css"/>
+    </head>
+    <body>
+        <div class="container">
+            <div class="row text-center">
+                <h1>Bruno Raimbault</h1>
+                <div class="titledesc">Public space</div>
+                <h3>LinkedIn: <a href="uk.linkedin.com/in/braimbault" target="_blank">@braimbault</a></h3>
+                <h3>Github: <a href="https://github.com/BRaimbault" target="_blank">braimbault</a></h3>
+            </div>
+            <div class="row">
+                <div class="title spacer text-center">General</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 spacer">
+                    <h4 class="text-center">Example</h4>
+                    <a href="http://simonbjohnson.github.io/Ebola-3W-Dashboard/" target="_blank"><img src="thumbnails/thumbnail4.png" alt="Ebola 3W Dashboard Screenshot" class="center-block border"/></a>
+                    <p class="spacer">A dashboard with interactive charts to help Ebola responders understand and analyse data from the
+                        the <a href="http://www.unocha.org/">UN OCHA</a> Who, What, Where <a href="http://reliefweb.int/sites/reliefweb.int/files/resources/GIN_A4_L_140901_Ebola_3W_Reponse.pdf">data set</a>.  This dashboard was hosted on
+                        the UN run Humanitarian response <a href="https://wca.humanitarianresponse.info/fr/infographies-interactives">website</a> as one of the main tools for coordinating
+                        response efforts.
+                    </p>
+                </div>
+            </div>            
+            <div class="row">
+                <div class="title spacer text-center">More...</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 spacer">
+                    <h4 class="text-center">Interactive CV</h4>
+                    <a href="http://simonbjohnson.github.io/Ebola-3W-Dashboard/" target="_blank"><img src="thumbnails/thumbnail4.png" alt="Ebola 3W Dashboard Screenshot" class="center-block border"/></a>
+                    <p class="spacer">A dashboard with interactive charts to help Ebola responders understand and analyse data from the
+                        the <a href="http://www.unocha.org/">UN OCHA</a> Who, What, Where <a href="http://reliefweb.int/sites/reliefweb.int/files/resources/GIN_A4_L_140901_Ebola_3W_Reponse.pdf">data set</a>.  This dashboard was hosted on
+                        the UN run Humanitarian response <a href="https://wca.humanitarianresponse.info/fr/infographies-interactives">website</a> as one of the main tools for coordinating
+                        response efforts.
+                    </p>
+                </div>
+            </div>    
+        </div>
+    </body>
 </html>
