--- a/index.html
+++ b/index.html
@@ -35,11 +35,8 @@
             <div class="row">
                 <div class="col-sm-4 spacer">
                     <h4 class="text-center">Interactive CV</h4>
-                    <a href="http://simonbjohnson.github.io/Ebola-3W-Dashboard/" target="_blank"><img src="thumbnails/thumbnail1.png" alt="Ebola 3W Dashboard Screenshot" class="center-block border"/></a>
-                    <p class="spacer">A dashboard with interactive charts to help Ebola responders understand and analyse data from the
-                        the <a href="http://www.unocha.org/">UN OCHA</a> Who, What, Where <a href="http://reliefweb.int/sites/reliefweb.int/files/resources/GIN_A4_L_140901_Ebola_3W_Reponse.pdf">data set</a>.  This dashboard was hosted on
-                        the UN run Humanitarian response <a href="https://wca.humanitarianresponse.info/fr/infographies-interactives">website</a> as one of the main tools for coordinating
-                        response efforts.
+                    <a href="http://braimbault.github.io/amcharts_interactive_cv/" target="_blank"><img src="thumbnails/thumbnail1.png" alt="Interactive CV" class="center-block border"/></a>
+                    <p class="spacer">An interactive CV buildt with <a href="http://www.amcharts.com/">amCharts</a>.
                     </p>
                 </div>
             </div>    
