--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="row text-center">
                 <h1>Bruno Raimbault</h1>
                 <div class="titledesc">Public space</div>
-                <h3>LinkedIn: <a href="uk.linkedin.com/in/braimbault" target="_blank">@braimbault</a> - Github: <a href="https://github.com/BRaimbault" target="_blank">braimbault</a></h3>
+                <h3>LinkedIn: <a href="http://uk.linkedin.com/in/braimbault" target="_blank">@braimbault</a> - Github: <a href="https://github.com/BRaimbault" target="_blank">braimbault</a></h3>
             </div>
             <div class="row">
                 <div class="title spacer text-center">General</div>
