--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 spacer">
-                    <h4 class="text-center">Example</h4>
-                    <a href="http://braimbault.github.io/mapbox_test/" target="_blank"><img src="thumbnails/thumbnail1.png" alt="Example" class="center-block border"/></a>
-                    <p class="spacer">Example.
-                    </p>
-                <div class="col-sm-4 spacer">
                     <h4 class="text-center">Interactive CV</h4>
                     <a href="http://braimbault.github.io/amcharts_interactive_cv/" target="_blank"><img src="thumbnails/thumbnail2.png" alt="Interactive CV" class="center-block border"/></a>
                     <p class="spacer">An interactive CV buildt with <a href="http://www.amcharts.com/">amCharts</a>.
+                    </p>
+                </div>
+                <div class="col-sm-4 spacer">
+                    <h4 class="text-center"Explore WSS data</h4>
+                    <a href="http://braimbault.github.io/d3_WSS_explore/" target="_blank"><img src="thumbnails/thumbnail3.png" alt="Explore WSS data" class="center-block border"/></a>
+                    <p class="spacer">Evolution of access to Water Supply and Sanitation by country (<a href="http://www.wssinfo.org/">WSS</a>) between 1990 and 2012. Data from WHO and UNICEF.
                     </p>
                 </div>
             </div>            
