--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </p>
                 </div>
                 <div class="col-sm-4 spacer">
-                    <h4 class="text-center"Explore WSS data</h4>
+                    <h4 class="text-center">Explore WSS data</h4>
                     <a href="http://braimbault.github.io/d3_WSS_explore/" target="_blank"><img src="thumbnails/thumbnail3.png" alt="Explore WSS data" class="center-block border"/></a>
                     <p class="spacer">Work in progress.<br>
                     Evolution of access to Water Supply and Sanitation by country (<a href="http://www.wssinfo.org/">WSS</a>) between 1990 and 2012. Data from WHO and UNICEF.
