--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="row text-center">
                 <h1>Bruno Raimbault</h1>
-                <div class="titledesc">Public space</div>
+                <div class="titledesc">Visualizations - Public work</div>
                 <h3>LinkedIn: <a href="http://uk.linkedin.com/in/braimbault" target="_blank">@braimbault</a> - Github: <a href="https://github.com/BRaimbault" target="_blank">braimbault</a></h3>
             </div>
             <div class="row">
