--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="row">
                 <div class="col-sm-4 spacer">
                     <h4 class="text-center">Interactive CV</h4>
-                    <a href="http://braimbault.github.io/amcharts_interactive_cv/" target="_blank"><img src="thumbnails/thumbnail2.png" alt="Interactive CV" class="center-block border"/></a>
+                    <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/thumbnail2.png" alt="Interactive CV" class="center-block border"/></a>
                     <p class="spacer">Work in progress.<br>
-                    An interactive CV buildt with <a href="http://www.amcharts.com/">amCharts</a>.
+                    An interactive CV buildt with <a href="http://www.amcharts.com/">amCharts</a> and <a href="https://en.wordpress.com/">WordPress</a>.
                     </p>
                 </div>
                 <div class="col-sm-4 spacer">
