--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h4 class="text-center">Interactive CV</h4>
                     <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/thumbnail2.png" alt="Interactive CV" class="center-block border"/></a>
                     <p class="spacer">Work in progress.<br>
-                    An interactive CV buildt with <a href="http://www.amcharts.com/">amCharts</a> and <a href="https://en.wordpress.com/">WordPress</a>.
+                    An interactive CV built with <a href="http://www.amcharts.com/">amCharts</a> and <a href="https://en.wordpress.com/">WordPress</a>.
                     </p>
                 </div>
                 <div class="col-sm-4 spacer">
