--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <div class="col-sm-4 spacer">
                     <h4 class="text-center">Interactive CV</h4>
                     <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/thumbnail2.png" alt="Interactive CV" class="center-block border"/></a>
-                    <p class="spacer">Work in progress.<br>
-                    An interactive CV built with <a href="http://www.amcharts.com/">amCharts</a> and <a href="https://en.wordpress.com/">WordPress</a>.
+                    <p class="spacer">My interactive CV built with <a href="http://www.amcharts.com/">amCharts</a> and <a href="https://en.wordpress.com/">WordPress</a>.
+                    <br>Browse and find more details on my Engineer and Data Analyst career track and education from 2006 until now.
                     </p>
                 </div>
                 <div class="col-sm-4 spacer">
