--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                     <br>NB: Work in progress
                     </p>
                 </div>
+                <div class="col-sm-4 spacer">
+                    <h4 class="text-center">More soon...</h4>
+                    <a href="" target="_blank"><img src="thumbnails/thumbnail1.png" class="center-block border"/></a>
+                    <p class="spacer">More samples of my work will be displayed soon.
+                    </p>
+                </div>
             </div>            
         </div>
     </body>
