--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-sm-4 spacer">
                     <h4 class="text-center">More soon...</h4>
-                    <a href="" target="_blank"><img src="thumbnails/thumbnail1.png" class="center-block border"/></a>
+                    <a href="" target="_blank"><img src="http://www.africacentre.ac.za/Portals/0/Page_under_construction.png" class="center-block border"/></a>
                     <p class="spacer">More samples of my work will be displayed soon.
                     </p>
                 </div>
