--- a/index.html
+++ b/index.html
@@ -32,12 +32,20 @@
                     </p>
                 </div>
                 <div class="col-sm-4 spacer">
+                    <h4 class="text-center">Python for GIS</h4>
+                    <a href="" target="https://github.com/BRaimbault/py_GIS_toolbox" target="_blank"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/220px-Python-logo-notext.svg.png" alt="Have a look at my Python scripts" class="center-block border"/></a>
+                    <p class="spacer">Here are presented some of the scripts I wrote in Python to automate tasks in GIS software: <a href="http://www.qgis.org/en/site/">QGIS</a>, <a href="https://josm.openstreetmap.de/">jOSM</a>...
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 spacer">
                     <h4 class="text-center">More soon...</h4>
                     <a href="" target="_blank"><img src="thumbnails/thumbnail0.png" class="center-block border"/></a>
                     <p class="spacer">More samples of my work will be displayed soon.
                     </p>
                 </div>
-            </div>            
+            </div>
         </div>
     </body>
 </html>
