--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="col-sm-4 spacer">
                     <h4 class="text-center">Python for GIS</h4>
-                    <a href="" target="https://github.com/BRaimbault/py_GIS_toolbox" target="_blank"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/220px-Python-logo-notext.svg.png" alt="Have a look at my Python scripts" class="center-block border"/></a>
+                    <a href="" target="https://github.com/BRaimbault/py_GIS_toolbox.git" target="_blank"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/220px-Python-logo-notext.svg.png" alt="Have a look at my Python scripts" class="center-block border"/></a>
                     <p class="spacer">Here are presented some of the scripts I wrote in Python to automate tasks in GIS software: <a href="http://www.qgis.org/en/site/">QGIS</a>, <a href="https://josm.openstreetmap.de/">jOSM</a>...
                     </p>
                 </div>
