--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="row text-center">
                 <h1>Bruno Raimbault</h1>
-                <div class="titledesc">Visualizations - Public work</div>
+                <div class="titledesc">Visualisations - Public work</div>
                 <h3>E-m@il: <a href="mailto:raimbault.bruno@gmail.com">raimbault.bruno@gmail.com</a>
                 - LinkedIn: <a href="http://uk.linkedin.com/in/braimbault" target="_blank">@braimbault</a>
                 - Github: <a href="https://github.com/BRaimbault" target="_blank">braimbault</a></h3>
