--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
             <div class="row">
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">Interactive CV</h4>
-                    <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/thumbnail2.png" alt="Interactive CV" class="center-block border"/></a>
-                    <p class="spacer">My interactive CV built with <a href="http://www.amcharts.com/">amCharts</a> and <a href="https://en.wordpress.com/">WordPress</a>.
+                    <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/thumbnail-1.png" alt="Interactive CV" class="center-block border"/></a>
+                    <p class="spacer">My interactive CV built with <a href="http://www.amcharts.com/">amCharts.js</a> and <a href="https://en.wordpress.com/">WordPress</a>.
                     <br>Browse and find more details on my Engineer and Data Analyst career track and education from 2006 until now.
                     </p>
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">Explore WSS data</h4>
-                    <a href="http://braimbault.github.io/d3_WSS_explore/" target="_blank"><img src="thumbnails/thumbnail3.png" alt="Explore WSS data" class="center-block border"/></a>
-                    <p class="spacer">Evolution of access to Water Supply and Sanitation by country (<a href="http://www.wssinfo.org/">WSS</a>) between 1990 and 2012. Data from WHO and UNICEF. Built with <a href="http://d3js.org/">d3</a>.
+                    <a href="http://braimbault.github.io/d3_WSS_explore/" target="_blank"><img src="thumbnails/thumbnail-2.png" alt="Explore WSS data" class="center-block border"/></a>
+                    <p class="spacer">Evolution of access to Water Supply and Sanitation by country (<a href="http://www.wssinfo.org/">WSS</a>) between 1990 and 2012. Data from WHO and UNICEF. Built with <a href="http://d3js.org/">d3.js</a>.
+                    </p>
+                </div>
+                <div class="col-sm-3 spacer">
+                    <h4 class="text-center">WASH in HCF</h4>
+                    <a href="http://braimbault.github.io/leaflet_WASH_in_HCF/" target="_blank"><img src="thumbnails/thumbnail-3.png" alt="WASH in HCF" class="center-block border"/></a>
+                    <p class="spacer">WAter, Sanitation and Hygiene coverage in Health Care Facilities in Low Income Countries - (<a href="http://www.who.int/water_sanitation_health/publications/wash-health-care-facilities/en/">WHO report</a>) published in 2015. Built with <a href="http://leafletjs.com/">leaflet.js</a>.
                     </p>
                 </div>
                 <div class="col-sm-3 spacer">
@@ -36,6 +42,8 @@
                     <p class="spacer">Here are presented some of the scripts I wrote in Python to automate tasks in GIS software: <a href="http://www.qgis.org/en/site/">QGIS</a>, <a href="https://josm.openstreetmap.de/">jOSM</a>...
                     </p>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">More soon...</h4>
                     <a href="" target="_blank"><img src="thumbnails/thumbnail0.png" class="center-block border"/></a>
