--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">More soon...</h4>
-                    <a href="" target="_blank"><img src="thumbnails/thumbnail0.png" class="center-block border"/></a>
+                    <a href="" target="_blank"><img src="thumbnails/thumbnail-0.png" class="center-block border"/></a>
                     <p class="spacer">More samples of my work will be displayed soon.
                     </p>
                 </div>
