--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">Interactive CV</h4>
                     <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/thumbnail-1.png" alt="Interactive CV" class="center-block border"/></a>
-                    <p class="spacer">My interactive CV built with <a href="http://www.amcharts.com/">amCharts.js</a> and <a href="https://en.wordpress.com/">WordPress</a>.
-                    <br>Browse and find more details on my Engineer and Data Analyst career track and education from 2006 until now.
-                    </p>
+                    <p class="spacer">Browse and find more details on my Engineer and Data Analyst career track and education from 2006 until now.
+                    Built with <a href="http://www.amcharts.com/">amCharts.js</a> and <a href="https://en.wordpress.com/">WordPress</a>.</p>
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">Explore WSS data</h4>
