--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">WASH in HCF</h4>
                     <a href="http://braimbault.github.io/leaflet_WASH_in_HCF/" target="_blank"><img src="thumbnails/thumbnail-2.png" alt="WASH in HCF" class="center-block border"/></a>
-                    <p class="spacer">WAter, Sanitation and Hygiene coverage in Health Care Facilities in Low Income Countries - (<a href="http://www.who.int/water_sanitation_health/publications/wash-health-care-facilities/en/">WHO report</a>) published in 2015. Built with <a href="http://leafletjs.com/">leaflet.js</a>.
+                    <p class="spacer">WAter, Sanitation and Hygiene coverage in Health Care Facilities in Low and Middle Income Countries - (<a href="http://www.who.int/water_sanitation_health/publications/wash-health-care-facilities/en/">WHO report</a>) published in 2015. Built with <a href="http://leafletjs.com/">leaflet.js</a>.
                     </p>
                 </div>
                 <div class="col-sm-3 spacer">
