--- a/index.html
+++ b/index.html
@@ -17,33 +17,39 @@
                 - Github: <a href="https://github.com/BRaimbault" target="_blank">braimbault</a></h3>
             </div>
             <div class="row">
-                <div class="col-sm-3 spacer">
+                <div class="col-sm-4 spacer">
                     <h4 class="text-center">Interactive CV</h4>
                     <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/thumbnail-1.png" alt="Interactive CV" class="center-block border"/></a>
                     <p class="spacer">Browse and find more details on my Engineer and Data Analyst career track and education from 2006 until now.
                     Built with <a href="http://www.amcharts.com/">amCharts.js</a> and <a href="https://en.wordpress.com/">WordPress</a>.</p>
                 </div>
-                <div class="col-sm-3 spacer">
+                <div class="col-sm-4 spacer">
                     <h4 class="text-center">Explore WSS data</h4>
                     <a href="http://braimbault.github.io/d3_WSS_explore/" target="_blank"><img src="thumbnails/thumbnail-3.png" alt="Explore WSS data" class="center-block border"/></a>
                     <p class="spacer">Evolution of access to Water Supply and Sanitation by country (<a href="http://www.wssinfo.org/">WSS</a>) between 1990 and 2012. Data from WHO and UNICEF. Built with <a href="http://d3js.org/">d3.js</a>.
                     </p>
                 </div>
-                <div class="col-sm-3 spacer">
+                <div class="col-sm-4 spacer">
                     <h4 class="text-center">WASH in HCF</h4>
                     <a href="http://braimbault.github.io/leaflet_WASH_in_HCF/" target="_blank"><img src="thumbnails/thumbnail-2.png" alt="WASH in HCF" class="center-block border"/></a>
                     <p class="spacer">WAter, Sanitation and Hygiene coverage in Health Care Facilities in Low and Middle Income Countries - (<a href="http://www.who.int/water_sanitation_health/publications/wash-health-care-facilities/en/">WHO report</a>) published in 2015. Built with <a href="http://leafletjs.com/">leaflet.js</a>.
                     </p>
                 </div>
-                <div class="col-sm-3 spacer">
+			</div>
+			<div class="row">	
+                <div class="col-sm-4 spacer">
+                    <h4 class="text-center">Nepal RCS - SitRep</h4>
+                    <a href="http://braimbault.github.io/leaflet_NRCS-SitRep/" target="_blank"><img src="thumbnails/thumbnail-4.png" alt="Nepal RC - SitRep" class="center-block border"/></a>
+                    <p class="spacer">Dashboard to publish Situational Reports (SitRep) for the <a href="http://www.nrcs.org/">Nepal Red Cross Society</a> (RCS) after April 2015 EQ. Built with <a href="http://leafletjs.com/">leaflet.js</a>.
+                    </p>
+                </div>	
+                <div class="col-sm-4 spacer">
                     <h4 class="text-center">Python for GIS</h4>
                     <a href="https://github.com/BRaimbault/py_GIS_toolbox/wiki" target="_blank"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/220px-Python-logo-notext.svg.png" alt="Have a look at my Python scripts" class="center-block border" style="padding: 40px 40px" width="220" height="220"/></a>
                     <p class="spacer">Here are presented some of the scripts I wrote in Python to automate tasks in GIS software: <a href="http://www.qgis.org/en/site/">QGIS</a>, <a href="https://josm.openstreetmap.de/">jOSM</a>...
                     </p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-3 spacer">
+                <div class="col-sm-4 spacer">
                     <h4 class="text-center">More soon...</h4>
                     <a href="" target="_blank"><img src="thumbnails/thumbnail-0.png" class="center-block border"/></a>
                     <p class="spacer">More samples of my work will be displayed soon.
