--- a/index.html
+++ b/index.html
@@ -10,46 +10,89 @@
     <body>
         <div class="container">
             <div class="row text-center">
-                <h1>Bruno Raimbault</h1>
-                <div class="titledesc">Visualisations - Public work</div>
-                <h3>E-m@il: <a href="mailto:raimbault.bruno@gmail.com">raimbault.bruno@gmail.com</a>
+                <div class="titledesc"><h2>Bruno Raimbault - Information Systems Engineer - Public work</h2></div>
+                <h4>E-m@il: <a href="mailto:raimbault.bruno@gmail.com">raimbault.bruno@gmail.com</a>
                 - LinkedIn: <a href="http://uk.linkedin.com/in/braimbault" target="_blank">@braimbault</a>
-                - Github: <a href="https://github.com/BRaimbault" target="_blank">braimbault</a></h3>
+                - Github: <a href="https://github.com/BRaimbault" target="_blank">braimbault</a></h4>
             </div>
             <div class="row">
-                <div class="col-sm-4 spacer">
-                    <h4 class="text-center">Interactive CV</h4>
-                    <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/thumbnail-1.png" alt="Interactive CV" class="center-block border"/></a>
-                    <p class="spacer">Browse and find more details on my Engineer and Data Analyst career track and education from 2006 until now.
-                    Built with <a href="http://www.amcharts.com/">amCharts.js</a> and <a href="https://en.wordpress.com/">WordPress</a>.</p>
+                <div class="col-sm-3 spacer">
+                    <h4 class="text-center">MSF Dashboard - Surveillance</h4>
+                    <a href="http://braimbault.github.io/MSF-Dashboard_Surveillance-Tonkolili/demo-site/" target="_blank"><img src="thumbnails/dashboard_overview.png" alt="MSF Dashboard - Surveillance" class="center-block border"/></a>
+                    <p class="spacer">[April 2016] Dashboard for Medical Surveillance Data visualisation. Live example: Tonkolili District, Sierra Leone.
+                    Built with <a href="https://dc-js.github.io/dc.js/">dc.js</a>, <a href="http://leafletjs.com/">leaflet.js</a> and <a href="https://github.com/BRaimbault/MSF-Dashboard_Surveillance-Tonkolili/blob/master/demo-site/lib/licenses.txt">others</a>. <a href="http://www.msf.org.uk/">@MSF-UK</a></p>
                 </div>
-                <div class="col-sm-4 spacer">
-                    <h4 class="text-center">Explore WSS data</h4>
-                    <a href="http://braimbault.github.io/d3_WSS_explore/" target="_blank"><img src="thumbnails/thumbnail-3.png" alt="Explore WSS data" class="center-block border"/></a>
-                    <p class="spacer">Evolution of access to Water Supply and Sanitation by country (<a href="http://www.wssinfo.org/">WSS</a>) between 1990 and 2012. Data from WHO and UNICEF. Built with <a href="http://d3js.org/">d3.js</a>.
+                <div class="col-sm-3 spacer">
+                    <h4 class="text-center">MSF Dashboard - Outbreak</h4>
+                    <a href="NA" target="_blank"><img src="thumbnails/dashboard2_overview.png" alt="MSF Dashboard - Outbreak" class="center-block border"/></a>
+                    <p class="spacer">[March 2016] Dashboard for Medical Outbreak Data visualisation. Live example: Lubumbashi, DRC.
+                    Built with <a href="https://dc-js.github.io/dc.js/">dc.js</a>, <a href="http://leafletjs.com/">leaflet.js</a> and <a href="https://github.com/BRaimbault/MSF-Dashboard_Surveillance-Tonkolili/blob/master/demo-site/lib/licenses.txt">others</a>. <a href="http://www.msf.org.uk/">@MSF-UK</a>
                     </p>
                 </div>
-                <div class="col-sm-4 spacer">
-                    <h4 class="text-center">WASH in HCF</h4>
-                    <a href="http://braimbault.github.io/leaflet_WASH_in_HCF/" target="_blank"><img src="thumbnails/thumbnail-2.png" alt="WASH in HCF" class="center-block border"/></a>
-                    <p class="spacer">WAter, Sanitation and Hygiene coverage in Health Care Facilities in Low and Middle Income Countries - (<a href="http://www.who.int/water_sanitation_health/publications/wash-health-care-facilities/en/">WHO report</a>) published in 2015. Built with <a href="http://leafletjs.com/">leaflet.js</a>.
+                <div class="col-sm-3 spacer">
+                    <h4 class="text-center">Ethiopia RCS - Mapfolio</h4>
+                    <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/eth_mapfolio.png" alt="Ethiopia RCS - Mapfolio" class="center-block border"/></a>
+                    <p class="spacer">[December 2015] Browse the maps produced to support the Ethiopia RCS during the Drought Emergency Assessment.
+                    Built from the American Red Cross <a href="https://github.com/AmericanRedCross/nepal-maps">mapfolio</a> tweaked to use Dropbox as a backend. <a href="http://www.redcross.org.uk/">@BritishRedCross</a>
                     </p>
                 </div>
-			</div>
-			<div class="row">	
-                <div class="col-sm-4 spacer">
+                <div class="col-sm-3 spacer">
+                    <h4 class="text-center">Ethiopia RCS - DHIS</h4>
+                    <a href="https://braimbault.github.io/dc_ERCS-DHIS/" target="_blank"><img src="thumbnails/eth_dhis.png" alt="Ethiopia RCS - DHIS" class="center-block border"/></a>
+                    <p class="spacer">[November 2015] Simple Dashboard for Medical Surveillance Data visualisation.
+                    Built with <a href="https://dc-js.github.io/dc.js/">dc.js</a> and <a href="http://leafletjs.com/">leaflet.js</a>. <a href="http://www.redcross.org.uk/">@BritishRedCross</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3 spacer">
                     <h4 class="text-center">Nepal RCS - SitRep</h4>
                     <a href="http://braimbault.github.io/leaflet_NRCS-SitRep/" target="_blank"><img src="thumbnails/thumbnail-4.png" alt="Nepal RC - SitRep" class="center-block border"/></a>
-                    <p class="spacer">Dashboard to publish Situational Reports (SitRep) for the <a href="http://www.nrcs.org/">Nepal Red Cross Society</a> (RCS) after April 2015 EQ. Built with <a href="http://leafletjs.com/">leaflet.js</a>.
+                    <p class="spacer">[June 2015] Dashboard to publish Situational Reports (SitRep) for the <a href="http://www.nrcs.org/">Nepal Red Cross Society</a> (RCS) after April 2015 EQ. Built with <a href="http://leafletjs.com/">leaflet.js</a>. <a href="http://www.redcross.org.uk/">@BritishRedCross</a>
                     </p>
-                </div>	
-                <div class="col-sm-4 spacer">
+                </div>
+                <div class="col-sm-3 spacer">
                     <h4 class="text-center">Python for GIS</h4>
                     <a href="https://github.com/BRaimbault/py_GIS_toolbox/wiki" target="_blank"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/220px-Python-logo-notext.svg.png" alt="Have a look at my Python scripts" class="center-block border" style="padding: 40px 40px" width="220" height="220"/></a>
                     <p class="spacer">Here are presented some of the scripts I wrote in Python to automate tasks in GIS software: <a href="http://www.qgis.org/en/site/">QGIS</a>, <a href="https://josm.openstreetmap.de/">jOSM</a>...
                     </p>
                 </div>
-                <div class="col-sm-4 spacer">
+                <div class="col-sm-3 spacer">
+                    <h4 class="text-center">WASH in HCF</h4>
+                    <a href="http://braimbault.github.io/leaflet_WASH_in_HCF/" target="_blank"><img src="thumbnails/thumbnail-2.png" alt="WASH in HCF" class="center-block border"/></a>
+                    <p class="spacer">[May 2015] WAter, Sanitation and Hygiene coverage in Health Care Facilities in Low and Middle Income Countries - (<a href="http://www.who.int/water_sanitation_health/publications/wash-health-care-facilities/en/">WHO report</a>) published in 2015. Built with <a href="http://leafletjs.com/">leaflet.js</a>.
+                    </p>
+                </div>
+                <div class="col-sm-3 spacer">
+                    <h4 class="text-center">Explore WSS data</h4>
+                    <a href="http://braimbault.github.io/d3_WSS_explore/" target="_blank"><img src="thumbnails/thumbnail-3.png" alt="Explore WSS data" class="center-block border"/></a>
+                    <p class="spacer">[March 2015] Evolution of access to Water Supply and Sanitation by country (<a href="http://www.wssinfo.org/">WSS</a>) between 1990 and 2012. Data from WHO and UNICEF. Published on HDX. Built with <a href="http://d3js.org/">d3.js</a>.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3 spacer">
+                    <h4 class="text-center">Interactive CV (not maintained)</h4>
+                    <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/thumbnail-1.png" alt="Interactive CV" class="center-block border"/></a>
+                    <p class="spacer">[January 2015] Browse and find more details on my Information System Engineer career track and education from 2006 until now.
+                    Built with <a href="http://www.amcharts.com/">amCharts.js</a> and <a href="https://en.wordpress.com/">WordPress</a>.
+                    </p>
+                </div>
+                <div class="col-sm-3 spacer">
+                    <h4 class="text-center">ALICE - Contribution</h4>
+                    <a href="http://www.brgm.eu/project/quantitative-modelling-of-landslide-hazard-with-alice-tool" target="_blank"><img src="thumbnails/brgm.png" alt="ALICE" class="center-block border"/></a>
+                    <p class="spacer">[June 2012] Quantitative approach to landslide hasard.
+                    Built with <a href="http://www.pitneybowes.com/us/location-intelligence/geographic-information-systems/mapinfo-pro.html">VBA and SQL for MapInfo</a> and <a href="https://www.arcgis.com/features/">Python for ArcGIS</a>. <a href="http://www.brgm.eu/">@BRGM</a>
+                    </p>
+                </div>
+                <div class="col-sm-3 spacer">
+                    <h4 class="text-center">Hydraccess - Contribution</h4>
+                    <a href="http://www.ore-hybam.org/index.php/eng/Software/Hydraccess" target="_blank"><img src="thumbnails/ird.png" alt="Hydraccess" class="center-block border"/></a>
+                    <p class="spacer">[January 2011] Hydrological data management and analysis software.
+                    Built with <a href="https://products.office.com/en-us/access">VBA and SQL for MS Access</a>. <a href="https://en.ird.fr/ird.fr">@IRD</a>
+                    </p>
+                </div>  	
+                <div class="col-sm-3 spacer">
                     <h4 class="text-center">More soon...</h4>
                     <a href="" target="_blank"><img src="thumbnails/thumbnail-0.png" class="center-block border"/></a>
                     <p class="spacer">More samples of my work will be displayed soon.
