--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <div class="row">
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">MSF Dashboard - Surveillance</h4>
-                    <a href="http://braimbault.github.io/MSF-Dashboard_Surveillance-Tonkolili/demo-site/" target="_blank"><img src="thumbnails/dashboard_overview.png" alt="MSF Dashboard - Surveillance" class="center-block border"/></a>
-                    <p class="spacer">[April 2016] Dashboard for Medical Surveillance Data visualisation. Live example: Tonkolili District, Sierra Leone.
+                    <a href="http://msf-uk.github.io/MSF-Dashboard/ver_demos/cfg_dhmt-tonkolili/" target="_blank"><img src="thumbnails/dashboard_overview.png" alt="MSF Dashboard - Surveillance" class="center-block border"/></a>
+                    <p class="spacer">[April 2016] Dashboard for Medical Surveillance Data visualisation. Live example: Tonkolili District, Sierra Leone. Read about the MS-Dashboard library <a href="https://github.com/MSF-UK/MSF-Dashboard">here</a>. 
                     Built with <a href="https://dc-js.github.io/dc.js/">dc.js</a>, <a href="http://leafletjs.com/">leaflet.js</a> and <a href="https://github.com/BRaimbault/MSF-Dashboard_Surveillance-Tonkolili/blob/master/demo-site/lib/licenses.txt">others</a>. <a href="http://www.msf.org.uk/">@MSF-UK</a></p>
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">MSF Dashboard - Outbreak</h4>
-                    <a href="NA" target="_blank"><img src="thumbnails/dashboard2_overview.png" alt="MSF Dashboard - Outbreak" class="center-block border"/></a>
-                    <p class="spacer">[March 2016] Dashboard for Medical Outbreak Data visualisation. Live example: Lubumbashi, DRC.
+                    <a href="http://msf-uk.github.io/MSF-Dashboard/ver_demos/cfg_msf-lubumbashi" target="_blank"><img src="thumbnails/dashboard2_overview.png" alt="MSF Dashboard - Outbreak" class="center-block border"/></a>
+                    <p class="spacer">[March 2016] Dashboard for Medical Outbreak Data visualisation. Live example: Lubumbashi, DRC. Read about the MS-Dashboard library <a href="https://github.com/MSF-UK/MSF-Dashboard">here</a>. 
                     Built with <a href="https://dc-js.github.io/dc.js/">dc.js</a>, <a href="http://leafletjs.com/">leaflet.js</a> and <a href="https://github.com/BRaimbault/MSF-Dashboard_Surveillance-Tonkolili/blob/master/demo-site/lib/licenses.txt">others</a>. <a href="http://www.msf.org.uk/">@MSF-UK</a>
                     </p>
                 </div>
