--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">Ethiopia RCS - Mapfolio</h4>
-                    <a href="http://raimbault.bru.free.fr/" target="_blank"><img src="thumbnails/eth_mapfolio.png" alt="Ethiopia RCS - Mapfolio" class="center-block border"/></a>
+                    <a href="https://braimbault.github.io/website_ERCS-mapfolio/" target="_blank"><img src="thumbnails/eth_mapfolio.png" alt="Ethiopia RCS - Mapfolio" class="center-block border"/></a>
                     <p class="spacer">[December 2015] Browse the maps produced to support the Ethiopia RCS during the Drought Emergency Assessment.
                     Built from the American Red Cross <a href="https://github.com/AmericanRedCross/nepal-maps">mapfolio</a> tweaked to use Dropbox as a backend. <a href="http://www.redcross.org.uk/">@BritishRedCross</a>
                     </p>
