--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 - LinkedIn: <a href="http://uk.linkedin.com/in/braimbault" target="_blank">@braimbault</a>
                 - Github: <a href="https://github.com/BRaimbault" target="_blank">braimbault</a></h4>
             </div>
+            <div class="row text-center">
+                <p>This portfolio is not actively maintained.</p>
+            </div>
             <div class="row">
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">MSF Dashboard - Surveillance</h4>
