--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 - Github: <a href="https://github.com/BRaimbault" target="_blank">braimbault</a></h4>
             </div>
             <div class="row text-center">
-                <p>This portfolio is not actively maintained.</p>
+                <h5>This portfolio is not actively maintained.</h5>
             </div>
             <div class="row">
                 <div class="col-sm-3 spacer">
