--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         Check it on the <a href=https://apps.dhis2.org/app/0346e2de-7aca-4732-bda8-26636c9cddf0 target="_blank">dhis2 app store</a>.
                         NB: HMIS refers to Health Information Management System.
                         Built with <a href="https://angular.io/" target="_blank">Angular.js</a> for <a href="https://dhis2.org/">dhis2</a>. 
-                        <a href="https://www.msf.es/" target="_blank">@MSF OCBA</a>
+                        <a href="https://www.msf.es/" target="_blank">@MSF-OCBA</a>
                     </p>
                 </div>
                 
