--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     </div>
                     <p class="spacer">
                         [August 2015] Browse the maps and data tables produced to support the Ethiopia RCS during the <a href="https://braimbault.github.io/website_ERCS-mapfolio/" target="_blank">Drought Emergency Assessment</a> and 
-                        the Shelter Cluster during the <a href="https://sheltercluster.org/myanmar-floods-2015/pages/tables-and-maps" target="_blank">Floods Response in Myanmar</a>.
+                        the Shelter Cluster during the <a href="https://sheltercluster.org/myanmar-floods-2015/pages/tables-and-maps" target="_blank">Floods Response</a> in Myanmar.
                         Maps with <a href="https://www.qgis.org/" target="_blank">QGIS</a>,  
-                        mapfolio from <a href="https://github.com/AmericanRedCross/nepal-maps" target="_blank">ARC</a> tweaked to use Dropbox. 
+                        mapfolio from <a href="https://github.com/AmericanRedCross/nepal-maps" target="_blank">ARC</a> with Dropbox. 
                         <a href="https://sheltercluster.org/" target="_blank">@GlobalShelterCluster</a>, <a href="http://www.redcross.org.uk/" target="_blank">@BritishRedCross</a>
                     </p>
                 </div>
