--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                         </div>
                     </div>
                     <p class="spacer">
-                        [June 2015] Dashboards to publish <a href="http://braimbault.github.io/leaflet_NRCS-SitRep/" target="_blank">Situational Reports (SitRep)</a> for the Nepal RCS after April 2015 earthquake and
-                        <a href="https://braimbault.github.io/dc_ERCS-DHIS/" target="_blank">Medical Surveillance Data (DHIS)</a> for the Ethiopia RCS during the Drought Emergency Assessment
+                        [June 2015] Dashboards to publish <a href="http://braimbault.github.io/leaflet_NRCS-SitRep/" target="_blank">Situational Reports (SitRep)</a> for the Nepal RCS Response to the Earthquake and
+                        <a href="https://braimbault.github.io/dc_ERCS-DHIS/" target="_blank">Medical Surveillance Data (DHIS)</a> for the Ethiopia RCS during the Drought Emergency Assessment.
 
                         Built with <a href="https://dc-js.github.io/dc.js/" target="_blank">dc.js</a> and 
                         <a href="http://leafletjs.com/" target="_blank">leaflet.js</a>. 
