--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">JHU - Air Pollution Modelling</h4>
-                    <div style="position: relative; width: 220px; height: 220px; overflow: hidden;"" alt="JHU - PM2.5 Modelling in California" class="center-block border" href="https://braimbault.github.io/2020-JHU-IA/" target="_blank">
+                    <a href="https://braimbault.github.io/2020-JHU-IA/" target="_blank"><div style="position: relative; width: 220px; height: 220px; overflow: hidden;"" alt="JHU - PM2.5 Modelling in California" class="center-block border">
                         <div style="position: absolute; top: -13px; left: 0; z-index: 0; text-align: center;">
                             <img style="width: 65%; height: 65%;" src="thumbnails/jhu_ia2.png">
                           </div>
                         <div style="position: absolute; top: 78px; left: 10px; z-index: 1;">
                           <img style="width: 100%; height: 100%;" src="thumbnails/jhu_ia1.png">
                         </div>
-                    </div>
+                    </div></a>
                     <p class="spacer">
                         [May 2020] Characterizing the spatial distribution of annual PM<sub>2.5</sub> across California. 
                         Exploration of multiple predictors and comparison of multiple Universal Kriging models performance. 
