--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
                 <!-- Mapfolios -->
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">RC - Mapfolios</h4>
-                    <div style="position: relative; width: 220px; height: 220px; overflow: hidden;"" alt="RC - Mapfolios" class="center-block border">
+                    <a href="https://sheltercluster.org/myanmar-floods-2015/pages/tables-and-maps" target="_blank"><div style="position: relative; width: 220px; height: 220px; overflow: hidden;"" alt="RC - Mapfolios" class="center-block border">
                         <div style="position: absolute; top: 0; left: 0; z-index: 0;">
                           <img src="thumbnails/myn_gsc.png">
                         </div>
                         <div style="position: absolute; top: 40px; left: 40px; z-index: 1;">
                           <img src="thumbnails/eth_mapfolio.png">
                         </div>
-                    </div>
+                    </div></a>
                     <p class="spacer">
                         [August 2015] Browse the maps and data tables produced to support the Ethiopia RCS during the <a href="https://braimbault.github.io/website_ERCS-mapfolio/" target="_blank">Drought Emergency Assessment</a> and 
                         the Shelter Cluster during the <a href="https://sheltercluster.org/myanmar-floods-2015/pages/tables-and-maps" target="_blank">Floods Response</a> in Myanmar.
@@ -117,18 +117,17 @@
                 <!-- InteractiveReports -->
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">RC - Interactive Reports</h4>
-                    <div style="position: relative; width: 220px; height: 220px; overflow: hidden;"" alt="RC - Interactive Reports" class="center-block border">
+                    <a href="http://braimbault.github.io/leaflet_NRCS-SitRep/" target="_blank"><div style="position: relative; width: 220px; height: 220px; overflow: hidden;"" alt="RC - Interactive Reports" class="center-block border">
                         <div style="position: absolute; top: 0; left: 0; z-index: 0;">
                           <img src="thumbnails/thumbnail-4.png">
                         </div>
                         <div style="position: absolute; top: 40px; left: 40px; z-index: 1;">
                           <img src="thumbnails/eth_dhis.png">
                         </div>
-                    </div>
+                    </div></a>
                     <p class="spacer">
                         [June 2015] Dashboards to publish <a href="http://braimbault.github.io/leaflet_NRCS-SitRep/" target="_blank">Situational Reports (SitRep)</a> for the Nepal RCS Response to the Earthquake and
                         <a href="https://braimbault.github.io/dc_ERCS-DHIS/" target="_blank">Medical Surveillance Data (DHIS)</a> for the Ethiopia RCS during the Drought Emergency Assessment.
-
                         Built with <a href="https://dc-js.github.io/dc.js/" target="_blank">dc.js</a> and 
                         <a href="http://leafletjs.com/" target="_blank">leaflet.js</a>. 
                         <a href="http://www.redcross.org.uk/" target="_blank">@BritishRedCross</a>
@@ -136,15 +135,15 @@
                 </div>
                 <!-- Open Humanitarian Data -->
                 <div class="col-sm-3 spacer">
-                    <h4 class="text-center">Open Humanitarian Data</h4>
-                    <div style="position: relative; width: 220px; height: 220px; overflow: hidden;"" alt="RC - Interactive Reports" class="center-block border">
+                    <h4 class="text-center">HDX - Open Humanitarian Data</h4>
+                    <a href="http://braimbault.github.io/d3_WSS_explore/" target="_blank"><div style="position: relative; width: 220px; height: 220px; overflow: hidden;"" alt="RC - Interactive Reports" class="center-block border">
                         <div style="position: absolute; top: -30px; left: 0; z-index: 0;">
                           <img src="thumbnails/thumbnail-2.png">
                         </div>
                         <div style="position: absolute; top: 50px; left: 40px; z-index: 1;">
                           <img src="thumbnails/thumbnail-3.png">
                         </div>
-                    </div>
+                    </div></a>
                     <p class="spacer">
                         [March 2015] Simple dashboards for exploration of Open Humanitarian Data:
                         i. <a href="http://braimbault.github.io/leaflet_WASH_in_HCF/" target="_blank">WAter, Sanitation and Hygiene coverage</a> in Health Care Facilities 
