--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <img src="thumbnails/brgm.png" alt="ALICE" class="center-block border"/>
                     </a>
                     <p class="spacer">
-                        [June 2012] Quantitative approach to landslide hasard.
+                        [June 2012] Quantitative approach to landslide hasard. Contributions to ALICE software.
                         Built with <a href="http://www.pitneybowes.com/us/location-intelligence/geographic-information-systems/mapinfo-pro.html" target="_blank">VBA and SQL for MapInfo</a>
                          and <a href="https://www.arcgis.com/features/" target="_blank">Python for ArcGIS</a>. <a href="http://www.brgm.eu/" target="_blank">@BRGM</a>
                     </p>
@@ -183,7 +183,7 @@
                         <img src="thumbnails/ird.png" alt="Hydraccess" class="center-block border"/>
                     </a>
                     <p class="spacer">
-                        [January 2011] Hydrological data management and analysis software.
+                        [January 2011] Hydrological data management and analysis software. Contributions to Hydraccess software.
                         Built with <a href="https://products.office.com/en-us/access" target="_blank">VBA and SQL for MS Access</a>. 
                         <a href="https://en.ird.fr/ird.fr" target="_blank">@IRD</a>
                     </p>
