--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <div style="position: absolute; top: 0; left: 0; z-index: 0;">
                           <img src="thumbnails/myn_gsc.png">
                         </div>
-                        <div style="position: absolute; top: 40px; left: 40px; z-index: 1;">
+                        <div style="position: absolute; top: 40px; left: 40px; z-index: 1; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);">
                           <img src="thumbnails/eth_mapfolio.png">
                         </div>
                     </div></a>
