--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                         <div style="position: absolute; top: 0; left: 0; z-index: 0;">
                           <img src="thumbnails/myn_gsc.png">
                         </div>
-                        <div style="position: absolute; top: 40px; left: 40px; z-index: 1; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);">
-                          <img src="thumbnails/eth_mapfolio.png">
+                        <div style="position: absolute; top: 40px; left: 40px; z-index: 1;">
+                          <img src="thumbnails/eth_mapfolio.png" style="filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));">
                         </div>
                     </div></a>
                     <p class="spacer">
@@ -122,7 +122,7 @@
                           <img src="thumbnails/thumbnail-4.png">
                         </div>
                         <div style="position: absolute; top: 40px; left: 40px; z-index: 1;">
-                          <img src="thumbnails/eth_dhis.png">
+                          <img src="thumbnails/eth_dhis.png" style="filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));">
                         </div>
                     </div></a>
                     <p class="spacer">
@@ -141,7 +141,7 @@
                           <img src="thumbnails/thumbnail-2.png">
                         </div>
                         <div style="position: absolute; top: 50px; left: 40px; z-index: 1;">
-                          <img src="thumbnails/thumbnail-3.png">
+                          <img src="thumbnails/thumbnail-3.png" style="filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));">
                         </div>
                     </div></a>
                     <p class="spacer">
