--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">JHU - Air Pollution Modelling</h4>
-                    <a href="https://braimbault.github.io/2020-JHU-IA/" target="_blank"><div style="position: relative; width: 220px; height: 220px; overflow: hidden;"" alt="JHU - PM2.5 Modelling in California" class="center-block border">
+                    <a href="https://braimbault.github.io/2020-JHU-IA/" target="_blank"><div style="position: relative; width: 220px; height: 220px; overflow: hidden; background-color: white;"" alt="JHU - PM2.5 Modelling in California" class="center-block border">
                         <div style="position: absolute; top: -13px; left: 0; z-index: 0; text-align: center;">
                             <img style="width: 65%; height: 65%;" src="thumbnails/jhu_ia2.png">
                           </div>
@@ -136,7 +136,7 @@
                 <!-- Open Humanitarian Data -->
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">HDX - Open Humanitarian Data</h4>
-                    <a href="http://braimbault.github.io/d3_WSS_explore/" target="_blank"><div style="position: relative; width: 220px; height: 220px; overflow: hidden;"" alt="RC - Interactive Reports" class="center-block border">
+                    <a href="http://braimbault.github.io/d3_WSS_explore/" target="_blank"><div style="position: relative; width: 220px; height: 220px; overflow: hidden; background-color: white;"" alt="RC - Interactive Reports" class="center-block border">
                         <div style="position: absolute; top: -30px; left: 0; z-index: 0;">
                           <img src="thumbnails/thumbnail-2.png">
                         </div>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">BRGM - Landslides Modelling</h4>
-                    <a href="https://www.brgm.fr/en/reference-completed-project/safeland-mitigating-impacts-global-changes-land-movement-risks" target="_blank">
+                    <a href="https://www.brgm.fr/en/reference-completed-project/safeland-mitigating-impacts-global-changes-land-movement-risks" target="_blank" style="background-color: white;">
                         <img src="thumbnails/brgm.png" alt="ALICE" class="center-block border"/>
                     </a>
                     <p class="spacer">
@@ -179,7 +179,7 @@
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">IRD - Hydrological Analysis</h4>
-                    <a href="https://hybam.obs-mip.fr/hydraccess/" target="_blank">
+                    <a href="https://hybam.obs-mip.fr/hydraccess/" target="_blank" style="background-color: white;">
                         <img src="thumbnails/ird.png" alt="Hydraccess" class="center-block border"/>
                     </a>
                     <p class="spacer">
@@ -190,7 +190,7 @@
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">Python for GIS</h4>
-                    <a href="https://github.com/BRaimbault/py_GIS_toolbox/wiki" target="_blank">
+                    <a href="https://github.com/BRaimbault/py_GIS_toolbox/wiki" target="_blank" style="background-color: white;">
                         <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/220px-Python-logo-notext.svg.png" alt="Have a look at my Python scripts" class="center-block border" style="padding: 40px 40px" width="220" height="220"/>
                     </a>
                     <p class="spacer">
