--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">JHU - Air Pollution Modelling</h4>
-                    <a href="https://braimbault.github.io/2020-JHU-IA/" target="_blank"><div style="position: relative; width: 220px; height: 220px; overflow: hidden; background-color: white;"" alt="JHU - PM2.5 Modelling in California" class="center-block border">
+                    <a href="https://braimbault.github.io/2020-JHU-IA/" target="_blank"><div style="position: relative; width: 220px; height: 220px; overflow: hidden; background-image: url('thumbnails/white_image.png'); background-size: cover;"" alt="JHU - PM2.5 Modelling in California" class="center-block border">
                         <div style="position: absolute; top: -13px; left: 0; z-index: 0; text-align: center;">
                             <img style="width: 65%; height: 65%;" src="thumbnails/jhu_ia2.png">
                           </div>
