--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">BRGM - Landslides Modelling</h4>
-                    <a href="https://www.brgm.fr/en/reference-completed-project/safeland-mitigating-impacts-global-changes-land-movement-risks" target="_blank" style="background-image: url('thumbnails/white_image.png'); background-size: cover;">
+                    <a href="https://www.brgm.fr/en/reference-completed-project/safeland-mitigating-impacts-global-changes-land-movement-risks" target="_blank"><div style="background-image: url('thumbnails/white_image.png'); background-size: cover;">
                         <img src="thumbnails/brgm.png" alt="ALICE" class="center-block border"/>
-                    </a>
+                    </div></a>
                     <p class="spacer">
                         [<i>June 2012</i>] Quantitative approach to landslide hasard. Contributions to ALICE software.
                         Built with <a href="http://www.pitneybowes.com/us/location-intelligence/geographic-information-systems/mapinfo-pro.html" target="_blank">VBA and SQL for MapInfo</a>
