--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">BRGM - Landslides Modelling</h4>
-                    <a href="https://www.brgm.fr/en/reference-completed-project/safeland-mitigating-impacts-global-changes-land-movement-risks" target="_blank"><div style="background-image: url('thumbnails/white_image.png'); background-size: cover;">
+                    <a href="https://www.brgm.fr/en/reference-completed-project/safeland-mitigating-impacts-global-changes-land-movement-risks" target="_blank"><div style="position: relative; width: 220px; height: 220px; background-image: url('thumbnails/white_image.png'); background-size: cover;">
                         <img src="thumbnails/brgm.png" alt="ALICE" class="center-block border"/>
                     </div></a>
                     <p class="spacer">
