--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">BRGM - Landslides Modelling</h4>
-                    <a href="https://www.brgm.fr/en/reference-completed-project/safeland-mitigating-impacts-global-changes-land-movement-risks" target="_blank"><div style="position: relative; width: 220px; height: 220px; background-image: url('thumbnails/white_image.png'); background-size: cover;">
-                        <img src="thumbnails/brgm.png" alt="ALICE" class="center-block border"/>
+                    <a href="https://www.brgm.fr/en/reference-completed-project/safeland-mitigating-impacts-global-changes-land-movement-risks" target="_blank"><div style="position: relative; width: 220px; height: 220px; background-image: url('thumbnails/white_image.png'); background-size: cover;" class="center-block border">
+                        <img src="thumbnails/brgm.png" alt="ALICE"/>
                     </div></a>
                     <p class="spacer">
                         [<i>June 2012</i>] Quantitative approach to landslide hasard. Contributions to ALICE software.
