--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">BRGM - Landslides Modelling</h4>
                     <a href="https://www.brgm.fr/en/reference-completed-project/safeland-mitigating-impacts-global-changes-land-movement-risks" target="_blank"><div style="position: relative; width: 220px; height: 220px; background-image: url('thumbnails/white_image.png'); background-size: cover;" class="center-block border">
-                        <img src="thumbnails/brgm.png" alt="ALICE"/>
+                        <img src="thumbnails/brgm.png" alt="ALICE" style="width: 100%; height: 100%;"/>
                     </div></a>
                     <p class="spacer">
                         [<i>June 2012</i>] Quantitative approach to landslide hasard. Contributions to ALICE software.
@@ -179,9 +179,9 @@
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">IRD - Hydrological Analysis</h4>
-                    <a href="https://hybam.obs-mip.fr/hydraccess/" target="_blank" style=" background-image: url('thumbnails/white_image.png'); background-size: cover;">
-                        <img src="thumbnails/ird.png" alt="Hydraccess" class="center-block border"/>
-                    </a>
+                    <a href="https://hybam.obs-mip.fr/hydraccess/" target="_blank"><div style="position: relative; width: 220px; height: 220px; background-image: url('thumbnails/white_image.png'); background-size: cover;" class="center-block border">
+                        <img src="thumbnails/ird.png" alt="Hydraccess" style="width: 100%; height: 100%;"/>
+                    </div></a>
                     <p class="spacer">
                         [<i>January 2011</i>] Hydrological data management and analysis software. Contributions to Hydraccess software.
                         Built with <a href="https://products.office.com/en-us/access" target="_blank">VBA and SQL for MS Access</a>. 
@@ -190,9 +190,9 @@
                 </div>
                 <div class="col-sm-3 spacer">
                     <h4 class="text-center">Python for GIS</h4>
-                    <a href="https://github.com/BRaimbault/py_GIS_toolbox/wiki" target="_blank" style=" background-image: url('thumbnails/white_image.png'); background-size: cover;">
+                    <a href="https://github.com/BRaimbault/py_GIS_toolbox/wiki" target="_blank"><div style="position: relative; width: 220px; height: 220px; background-image: url('thumbnails/white_image.png'); background-size: cover;" class="center-block border">
                         <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/220px-Python-logo-notext.svg.png" alt="Have a look at my Python scripts" class="center-block border" style="padding: 40px 40px" width="220" height="220"/>
-                    </a>
+                    </div></a>
                     <p class="spacer">
                         Here are presented some of the scripts I wrote in Python to automate tasks in GIS software: 
                         <a href="http://www.qgis.org/en/site/" target="_blank">QGIS</a>, <a href="https://josm.openstreetmap.de/" target="_blank">jOSM</a>...
